--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "test/spec"]
 	path = test/spec
-	url = https://github.com/mustache/spec.git
+	url = git@github.com:drewlesueur/spec.git
 [submodule "test/qunit-logging"]
 	path = test/qunit-logging
 	url = git://github.com/keithamus/qunit-logging.git
